--- a/InternManagement/Pages/UserPage/Create.cshtml
+++ b/InternManagement/Pages/UserPage/Create.cshtml
@@ -5,6 +5,17 @@
     ViewData["Title"] = "Create User";
 }
 
+<style>
+    .tickbox-style {
+        width: 20px;
+        height: 20px;
+        border-radius: 3px;
+    }
+
+        .tickbox-style:checked {
+            background-color: #4CAF50; /* Green color for checked */
+        }
+</style>
 <h1>Create User</h1>
 
 <h4>User Details</h4>
@@ -32,9 +43,9 @@
                 <input asp-for="User.Avatar" class="form-control" />
                 <span asp-validation-for="User.Avatar" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="User.Status"></label>
-                <input asp-for="User.Status" type="checkbox" class="form-control" />
+            <div class="form-group form-check">
+                <input asp-for="User.Status" type="checkbox" class="form-check-input tickbox-style" />
+                <label asp-for="User.Status" class="form-check-label"></label>
                 <span asp-validation-for="User.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
