--- a/InternManagement/Pages/UserPage/Edit.cshtml
+++ b/InternManagement/Pages/UserPage/Edit.cshtml
@@ -23,6 +23,7 @@
 <div class="row">
     <div class="col-md-4">
         <form method="post">
+            <input type="hidden" asp-for="User.UserId" />
             <div class="form-group">
                 <label asp-for="User.UserName"></label>
                 <input asp-for="User.UserName" class="form-control" />
