Add User Authentication

--- a/InternManagement/Pages/Shared/_Layout.cshtml
+++ b/InternManagement/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,11 @@
                         </li>
                     </ul>
                 </div>
+                <div class="navbar-nav">
+                    <div class="nav-item text-nowrap">
+                        <a class="nav-link px-3" href="/Account/Logout">Sign out</a>
+                    </div>
+                </div>
             </div>
         </nav>
     </header>
