--- a/InternManagement/Pages/Shared/_Layout.cshtml
+++ b/InternManagement/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,11 @@
                         <input class="form-control me-sm-2" type="search" placeholder="Search">
                         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
                     </form>
+                    <div class="navbar-nav">
+                        <div class="nav-item text-nowrap text-light-emphasis">
+                            <a class="nav-link px-3" href="/Account/Logout">Sign out</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
