--- a/InternManagement/Pages/Users/Edit.cshtml
+++ b/InternManagement/Pages/Users/Edit.cshtml
@@ -25,7 +25,7 @@
                 <span asp-validation-for="User.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.Password" class="control-label"></label>
+                <label asp-for="User.Password" class="control-label">New Password</label>
                 <input asp-for="User.Password" class="form-control" />
                 <span asp-validation-for="User.Password" class="text-danger"></span>
             </div>
