--- a/InternManagement/Pages/Account/Login.cshtml
+++ b/InternManagement/Pages/Account/Login.cshtml
@@ -42,6 +42,9 @@
                     <div class="form-group text-center mt-2">
                         <button id="loginSAT" type="submit" class="btn btn-primary">Log in</button>
                     </div>
+                    <div class="form-group text-center mt-2">
+                        <a href="/Account/InternshipApplication" class="btn btn-secondary">Apply for Internship</a>
+                    </div>
                 </div>
             </form>
         </div>
