--- a/InternManagement/Pages/Account/InternshipApplication.cshtml
+++ b/InternManagement/Pages/Account/InternshipApplication.cshtml
@@ -61,6 +61,11 @@
                         <span asp-validation-for="Intern.Gpa" class="text-danger"></span>
                     </div>
                     <div class="form-group mb-3">
+                        <label asp-for="Intern.Birthday" class="control-label"></label>
+                        <input asp-for="Intern.Birthday" class="form-control" />
+                        <span asp-validation-for="Intern.Birthday" class="text-danger"></span>
+                    </div>
+                    <div class="form-group mb-3">
                         <label asp-for="Intern.InternshipStartingDate" class="control-label"></label>
                         <input asp-for="Intern.InternshipStartingDate" class="form-control" />
                         <span asp-validation-for="Intern.InternshipStartingDate" class="text-danger"></span>
