--- a/InternManagement/Pages/Account/Login.cshtml
+++ b/InternManagement/Pages/Account/Login.cshtml
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>Login | Simple App Test</title>
+    <title>Login | Intern Management System</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
