--- a/InternManagement/Pages/Users/Details.cshtml
+++ b/InternManagement/Pages/Users/Details.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.User.Password)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.Role)
+            @Html.DisplayNameFor(model => model.User.RoleName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.Role)
+            @Html.DisplayFor(model => model.User.RoleName)
         </dd>
     </dl>
 </div>
