--- a/InternManagement/Pages/Shared/_Layout.cshtml
+++ b/InternManagement/Pages/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
             </div>
 
             <div style="display: flex; flex-direction: column; width: 180px;margin-bottom:900px ">
-                <button type="button" class="btn btn-primary" style="margin-bottom: 5px;">Primary</button>
-                <button type="button" class="btn btn-primary" style="margin-bottom: 5px;">Primary</button>
-                <button type="button" class="btn btn-primary" style="margin-bottom: 5px;">Primary</button>
-                <button type="button" class="btn btn-primary" style="margin-bottom: 5px;">Primary</button>
+                <button type="button" class="btn btn-primary" style="margin-bottom: 5px;" href="/Index">Home</button>
+                <button type="button" class="btn btn-primary" style="margin-bottom: 5px;">Intern</button>
+                <button type="button" class="btn btn-primary" style="margin-bottom: 5px;" href="/Admin/ApproveInternships">Intern Applications</button>
+                <button type="button" class="btn btn-primary" style="margin-bottom: 5px;">Tools</button>
             </div>
 
             <div class="logout-area" style="background-color: #163851; height: 60px;width: 200px; display: flex; justify-content: center; align-items: center;">
