--- a/InternManagement/Pages/Account/InternshipApplication.cshtml
+++ b/InternManagement/Pages/Account/InternshipApplication.cshtml
@@ -72,6 +72,13 @@
                         <span asp-validation-for="Intern.Birthday" class="text-danger"></span>
                     </div>
                     <div class="form-group mb-3">
+                        <label asp-for="Intern.TeamId" class="control-label">Select Team</label>
+                        <select asp-for="Intern.TeamId" class="form-control" asp-items="Model.TeamOptions">
+                            <option value="">-- Select Team --</option>
+                        </select>
+                        <span asp-validation-for="Intern.TeamId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group mb-3">
                         <label asp-for="Intern.InternshipStartingDate" class="control-label"></label>
                         <input asp-for="Intern.InternshipStartingDate" class="form-control" />
                         <span asp-validation-for="Intern.InternshipStartingDate" class="text-danger"></span>
