--- a/InternManagement/Pages/Admin/ApproveInternships.cshtml
+++ b/InternManagement/Pages/Admin/ApproveInternships.cshtml
@@ -35,12 +35,11 @@
                     <tr>
                         <td>
                             <a href="#" class="intern-details-link" data-bs-toggle="modal" data-bs-target="#internDetailsModal" data-id="@intern.InternId">
-                                @intern.Name
+                                @intern.FullName
                             </a>
                         </td>
                         <td>@intern.Uni</td>
                         <td>@intern.Major</td>
-                        <td>@intern.Grade</td>
                         <td>@intern.Gpa</td>
                         <td>@intern.Status</td>
                         <td>
@@ -80,12 +79,11 @@
                     <tr>
                         <td>
                             <a href="#" class="intern-details-link" data-bs-toggle="modal" data-bs-target="#internDetailsModal" data-id="@intern.InternId">
-                                @intern.Name
+                                @intern.FullName
                             </a>
                         </td>
                         <td>@intern.Uni</td>
                         <td>@intern.Major</td>
-                        <td>@intern.Grade</td>
                         <td>@intern.Gpa</td>
                         <td>@intern.Status</td>
                         <td>
