Add create team at the same place create user

--- a/InternManagement/Pages/Shared/_InternDetails.cshtml
+++ b/InternManagement/Pages/Shared/_InternDetails.cshtml
@@ -26,7 +26,7 @@
         <p><strong>Start Date:</strong> @Model.InternshipStartingDate.ToShortDateString()</p>
         <p><strong>End Date:</strong> @Model.InternshipEndingDate.ToShortDateString()</p>
     </div>
-    @* <div class="col-md-6">
+    <div class="col-md-6">
         <h4>Documents</h4>
         @if (Model.CvUrl != null && Model.CvUrl.Length > 0)
         {
@@ -40,5 +40,5 @@
             var imgSrc = String.Format("data:image/jpeg;base64,{0}", base64Photo);
             <img src="@imgSrc" alt="Intern Photo" class="img-thumbnail" style="max-width: 200px;" />
         }
-    </div> *@
+    </div>
 </div>
