--- a/InternManagement/Pages/Users/Index.cshtml
+++ b/InternManagement/Pages/Users/Index.cshtml
@@ -1,47 +1,147 @@
 ﻿@page
-@model InternManagement.Pages.Users.IndexModel
+@model InternManagement.Pages.Users.UserManagementModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Intern Managment System";
 }
 
-<h1>Index</h1>
+<div class="row">
+     <h2>Add User</h2>
+    <div class="col-md-4 mt-4">
+        <form method="post" asp-page-handler="CreateUser">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="User.Username" class="control-label"></label>
+                <input asp-for="User.Username" class="form-control" />
+                <span asp-validation-for="User.Username" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="User.Email" class="control-label"></label>
+                <input asp-for="User.Email" class="form-control" />
+                <span asp-validation-for="User.Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="User.Password" class="control-label"></label>
+                <input asp-for="User.Password" class="form-control" type="password" />
+                <span asp-validation-for="User.Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="User.Role" class="control-label"></label>
+                <select asp-for="User.Role" class="form-control">
+                    <option value="1">Admin</option>
+                    <option value="2">Supervisor</option>
+                    <option value="3">Intern</option>
+                </select> 
+                <span asp-validation-for="User.Role" class="text-danger"></span>
+            </div>
+            <div class="form-group mt-2">
+                <input type="submit" value="Create User" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
 
-<p>
-    <a asp-page="Create" class="btn btn-success">Create New</a>
-</p>
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th scope="col">
-                @Html.DisplayNameFor(model => model.User[0].Username)
-            </th >         
-            <th scope="col">
-                @Html.DisplayNameFor(model => model.User[0].Email)
-            </th>
-            <th scope="col">
-                Role
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.User) {
-            <tr class="table-active">
-                <td scope="row">
-                @Html.DisplayFor(modelItem => item.Username)
-            </td>          
-                <td scope="row">
-                @Html.DisplayFor(modelItem => item.Email)
-                <td scope="row">
-                        @item.RoleName
-                </td>
-            <td>
-                    <a asp-page="./Edit" asp-route-id="@item.UserId" class="btn btn-primary">Edit</a> |
-                    <a asp-page="./Details" asp-route-id="@item.UserId" class="btn btn-info">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.UserId" class="btn btn-danger">Delete</a>
-            </td>
-        </tr>
+    <div class="col-md-8">
+        @if (Model.Users != null && Model.Users.Count > 0)
+        {
+            <div class="table-responsive border rounded p-1" style="max-height: 400px; overflow-y: auto;">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">
+                                @Html.DisplayNameFor(model => model.Users[0].Username)
+                            </th>
+                            <th scope="col">
+                                @Html.DisplayNameFor(model => model.Users[0].Email)
+                            </th>
+                            <th scope="col">
+                                Role
+                            </th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.Users)
+                        {
+                            <tr class="table-active">
+                                <td scope="row">
+                                    @Html.DisplayFor(modelItem => item.Username)
+                                </td>
+                                <td scope="row">
+                                    @Html.DisplayFor(modelItem => item.Email)
+                                </td>
+                                <td scope="row">
+                                    @item.RoleName
+                                </td>
+                                <td>
+                                    <a asp-page="./Edit" asp-route-id="@item.UserId" class="btn btn-primary">Edit</a> |
+                                    <a asp-page="./Delete" asp-route-id="@item.UserId" class="btn btn-danger">Delete</a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        }
+        else
+        {
+            <p>No users available.</p>
+        }
+    </div>
+
+    <h2 class="mt-4">Add Team</h2>
+    <div class="col-md-4 mt-4">
+        <form method="post" asp-page-handler="CreateTeam">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Team.TeamName" class="control-label">Team Name</label>
+                <input asp-for="Team.TeamName" class="form-control" required />
+                <span asp-validation-for="Team.TeamName" class="text-danger"></span>
+            </div>
+            <div class="form-group mt-2">
+                <input type="submit" value="Create Team" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+
+    <div class="col-md-8 mt-4">
+<h2 class="mt-8">Teams</h2>
+@if (Model.Teams != null && Model.Teams.Count > 0)
+{
+    <div class="table-responsive border rounded p-1" style="max-height: 400px; overflow-y: auto;">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Teams[0].TeamName)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Teams)
+                {
+                    <tr class="table-active">
+                        <td scope="row">
+                            @Html.DisplayFor(modelItem => item.TeamName)
+                        </td>
+                        <td>
+                            <a asp-page="./DeleteTeam" asp-route-id="@item.TeamId" class="btn btn-danger">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+        }
+    </div>
+
+    </div>
+</div>
+</div>
+
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
-    </tbody>
-</table>
