--- a/InternManagement/Pages/Account/InternshipApplication.cshtml
+++ b/InternManagement/Pages/Account/InternshipApplication.cshtml
@@ -32,6 +32,11 @@
                         <span asp-validation-for="Intern.Name" class="text-danger"></span>
                     </div>
                     <div class="form-group mb-3">
+                        <label asp-for="Intern.FullName" class="control-label"></label>
+                        <input asp-for="Intern.FullName" class="form-control" />
+                        <span asp-validation-for="Intern.FullName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group mb-3">
                         <label asp-for="Intern.Email" class="control-label"></label>
                         <input asp-for="Intern.Email" class="form-control" />
                         <span asp-validation-for="Intern.Email" class="text-danger"></span>
