--- a/InternManagement/Pages/Users/Delete.cshtml
+++ b/InternManagement/Pages/Users/Delete.cshtml
@@ -2,7 +2,7 @@
 @model InternManagement.Pages.Users.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete User";
 }
 
 <h1>Delete</h1>
@@ -23,13 +23,7 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.User.Email)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.Password)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.Password)
-        </dd>
+        </dd>      
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.User.Role)
         </dt>
