add page intern

--- a/InternManagement/Pages/Shared/_Layout.cshtml
+++ b/InternManagement/Pages/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
             var menuItems = new[]
             {
         new { Text = "Home", Icon = "home", Link = Url.Page("/Index") },
-        new { Text = "Interns", Icon = "users", Link = Url.Page("/Interns") },
+        new { Text = "Interns", Icon = "users", Link = Url.Page("/Interns/ManageInterns") },
         new { Text = "Intern Application", Icon = "briefcase", Link = Url.Page("/Admin/ApproveInternships") },
         };
 
