Add Notification for AD

--- a/InternManagement/Pages/Shared/_Layout.cshtml
+++ b/InternManagement/Pages/Shared/_Layout.cshtml
@@ -123,9 +123,9 @@
             </div>
             <div class="logout-area">
                 <span style="font-size: 18px; color: white;">
-                    <i class="fas fa-user-shield mr-2"></i>Admin
+                    <i class="fas fa-user-shield mr-2"></i>@TempData["Role"]
                 </span>
-                <a class="btn btn-danger btn-sm" href="Account/Logout">
+                <a class="btn btn-danger btn-sm" href="/Account/Logout">
                     <i class="fas fa-sign-out-alt mr-1"></i>Sign out
                 </a>
             </div>
