--- a/InternManagement/Pages/Index.cshtml
+++ b/InternManagement/Pages/Index.cshtml
@@ -15,6 +15,14 @@ ViewData["Title"] = "Home Page";
             toastr.success('@TempData["done"]');
         </script>
     }
+    @if (TempData["Approve"] != null)
+    {
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+        <script type="text/javascript">
+            toastr.warning('@TempData["Approve"]');
+        </script>
+    }
 </div>
 <div style="margin-top: 20px; background-color: bisque; height: fit-content; border-radius: 20px; padding: 20px;">
  
